Jeu_de_tests/error/flex_3.tpc

int main(void) {
    char c;
    c=''';
    return 0;
}
